debug: minor changes

--- a/posts/projects/558.md
+++ b/posts/projects/558.md
@@ -1,5 +1,5 @@
 ---
-title: "CS558 Projects"
+title: "Robotic Learning Projects"
 summary: "Classical + Learning Based Motion Planning / Control projects "
 coverImage: "/assets/projects/558_overview.png"
 order: 1
