feat: restructure + project add

--- a/posts/projects/b1.md
+++ b/posts/projects/b1.md
@@ -2,8 +2,8 @@
 title: "Unitree B1 Simulator"
 summary: "Designing the Avionics for a 65k ft LOX-Ethanol rocket"
 summary: "Extended unitree_ros to support B1 in Gazebo / PyBullet"
-coverImage: "/assets/projects/b1.png"
-order: 0
+coverImage: "/assets/projects/b1/b1.png"
+order: 1
 ---
 
 **Fully Functional B1 Sumulator**
@@ -12,7 +12,7 @@ order: 0
 
 Out of the box, Unitree provides a high-level controller, [unitree_guide](https://github.com/unitreerobotics/unitree_guide) for the Aliengo, GO1/2 and A1 in gazebo and pybullet, but when trying with the B1 model... 
 
-![B1 Model](/assets/projects/b1_broken.png)
+![B1 Model](/assets/projects/b1/b1_broken.png)
 
 ...it doesnt work.
 
@@ -20,7 +20,7 @@ And it doesn't help that the Unitree Dev team has no plan for updating the B1 co
 
 This simulator issues came after weeks of suffering to even communicate with the B1, solving problems like configuring the DNS and Default Gateways, communicating with Realsense Cameras, and performing surgery to replace a broken jetson NX module (taking out 216 screws with a allen wrench).
 
-![B1 Jeston](/assets/projects/b1_jetson.png)
+![B1 Jeston](/assets/projects/b1/b1_jetson.png)
 
 
 ## Major Simulator Changes:
